--- a/templates/shedule.jade
+++ b/templates/shedule.jade
@@ -5,7 +5,7 @@ html(lang='en')
 		title BotFedot.Admin
 		link(rel='stylesheet', href='../static/bower_components/bootstrap/dist/css/bootstrap.min.css')
 		link(rel='stylesheet', href='../static/bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css')
-		link(rel='stylesheet', href='main.css')
+		link(rel='stylesheet', href='../static/css/main.css')
 	body
 		#modal-edit.modal.fade
 			.modal-dialog
@@ -59,8 +59,8 @@ html(lang='en')
 						span.badge.date-item= item.date
 						span.label-item= item.label
 
-		script(src='../bower_components/jquery/dist/jquery.min.js')
-		script(src='../bower_components/moment/min/moment.min.js')
-		script(src='../bower_components/bootstrap/dist/js/bootstrap.min.js')
-		script(src='../bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js')
-		script(src='main.js')
+		script(src='../static/bower_components/jquery/dist/jquery.min.js')
+		script(src='../static/bower_components/moment/min/moment.min.js')
+		script(src='../static/bower_components/bootstrap/dist/js/bootstrap.min.js')
+		script(src='../static/bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js')
+		script(src='../static/js/main.js')
