--- a/templates/shedule.jade
+++ b/templates/shedule.jade
@@ -22,8 +22,9 @@ html(lang='en')
 										span.glyphicon.glyphicon-calendar
 							.input-group
 								span.input-group-addon Label
-								input.form-control.label-item(type='text', name='label')
+								input.form-control.label-item(type='text', name='title')
 						.modal-footer
+
 							button.btn.btn-secondary(type='button', data-dismiss='modal') Close
 							input.btn.btn-primary(type='submit', value='Save changes')
 		#modal-add.modal.fade
@@ -41,7 +42,7 @@ html(lang='en')
 							br
 							.input-group
 								span.input-group-addon Label
-								input.form-control(type='text', name='label')
+								input.form-control(type='text', name='title')
 						.modal-footer
 							button.btn.btn-secondary(type='button', data-dismiss='modal') Close
 							input.btn.btn-primary(type='submit', value='Create')
@@ -55,7 +56,7 @@ html(lang='en')
 				each item in list
 					li.list-group-item.item(id=item.id)
 						span.badge.date-item= item.date
-						span.label-item= item.label
+						span.label-item= item.title
 
 		script(src='../static/bower_components/jquery/dist/jquery.min.js')
 		script(src='../static/bower_components/moment/min/moment.min.js')
