add function delete item

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,6 +18,12 @@
 	font-size: 20px;
 }
 
+.delete-item {
+	position: absolute;
+    bottom: 15px;
+    left: 15px;
+}
+
 h1 {
 	margin-bottom: 50px;
 	margin-top: 20%;
